fix(book-a-table.css, bookATable.js): fix issue where close button of dialog is visible when dialog is closed

--- a/src/modules/book-a-table/book-a-table.css
+++ b/src/modules/book-a-table/book-a-table.css
@@ -105,6 +105,10 @@ form button {
     border-color: white;
 }
 
+.dialog-close .close {
+    display: none;
+}
+
 @keyframes scale-2d {
     0% { transform: scale(0, 0); }
     100% { transform: scale(1, 1); }
